--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ body {
   background: #121212;
   color: #ddd;
   font-family: 'Manrope', sans-serif;
-  line-height: 1.6;
+  line-height: 1.8;
 }
 
 h1 {
@@ -22,25 +22,25 @@ h1 {
 }
 
 #wave-text {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   max-width: 800px;
   margin: 0 auto 40px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 24px;
 }
 
 #wave-text p {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.1rem;
+  gap: 0.3rem; /* увеличенное расстояние между буквами/словами */
 }
 
 #wave-text span {
   display: inline-block;
   opacity: 0;
-  transform: translateY(15px);
-  animation: wave 0.6s forwards;
+  transform: translateY(10px);
+  animation: wave 0.5s forwards;
 }
 
 @keyframes wave {
@@ -83,7 +83,8 @@ article.book-item p { color: #bbb; }
 
 @media (max-width: 480px) {
   body { padding: 16px; }
-  #wave-text { font-size: 1rem; gap: 12px; }
+  #wave-text { font-size: 1rem; gap: 18px; }
+  #wave-text p { gap: 0.4rem; }
 }
 </style>
 </head>
@@ -101,16 +102,19 @@ article.book-item p { color: #bbb; }
     <h3>«Самый богатый человек в Вавилоне» — Джордж Клейсон</h3>
     <p>Классика финансовой мудрости — простые принципы накопления богатства, проверенные временем.</p>
   </article>
-  <!-- остальные книги оставляем как есть -->
 </section>
 
 <script>
 const paragraphs = [
-  "Привет! Меня зовут Павел, мне 14 лет. За последние месяцы я проделал огромную работу и не сдавался ни на шаг.",
+  "Привет! Меня зовут Павел, мне 14 лет.",
+  "За последние месяцы я проделал огромную работу и не сдавался ни на шаг.",
   "Я активно развиваюсь в спорте — бокс помогает мне выстраивать дисциплину, силу и выносливость.",
-  "Моя страсть — квадроциклы: Yamaha YFZ 450 стал символом упорства, свободы и адреналина. Каждый выезд, трюки и тренировки делают меня сильнее.",
-  "Параллельно я создаю Telegram-ассистента PavelPA с голосовыми ответами, напоминаниями и генерацией изображений. Этот проект помогает изучать технологии и ИИ на практике.",
-  "Я уверен, что дисциплина, труд и страсть к развитию помогают достигать амбициозных целей и превращать мечты в реальность. Следите за моими соцсетями, чтобы не пропустить новые приключения и крутые проекты."
+  "Моя страсть — квадроциклы: Yamaha YFZ 450 стал символом упорства, свободы и адреналина.",
+  "Каждый выезд, трюки и тренировки делают меня сильнее и закаляют характер.",
+  "Параллельно я создаю Telegram-ассистента PavelPA с голосовыми ответами, напоминаниями и генерацией изображений.",
+  "Этот проект помогает изучать технологии и искусственный интеллект на практике.",
+  "Я уверен, что дисциплина, труд и страсть к развитию помогают достигать амбициозных целей и превращать мечты в реальность.",
+  "Следите за моими соцсетями, чтобы не пропустить новые приключения и крутые проекты."
 ];
 
 const container = document.getElementById('wave-text');
