--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@ body {
   font-family: 'Manrope', sans-serif;
   line-height: 1.8;
   overflow-x: hidden;
-  position: relative;
 }
 
 #particles {
@@ -38,35 +37,22 @@ h1 {
 h1.visible { opacity: 1; transform: translateY(0); }
 
 #wave-text {
-  font-size: 1.2rem;
+  font-size: 1.15rem;
   max-width: 800px;
   margin: 0 auto 40px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 20px;
+  word-wrap: normal;
 }
 
 #wave-text p {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.3rem;
   opacity: 0;
   transform: translateY(10px);
   transition: all 0.6s ease;
 }
 
 #wave-text p.visible { opacity: 1; transform: translateY(0); }
-
-#wave-text span {
-  display: inline-block;
-  opacity: 0;
-  transform: translateY(10px);
-  animation: wave 0.5s forwards;
-}
-
-@keyframes wave {
-  to { opacity: 1; transform: translateY(0); }
-}
 
 button {
   display: block;
@@ -114,8 +100,7 @@ article.book-item p { color: #bbb; }
 
 @media (max-width: 480px) {
   body { padding: 16px; }
-  #wave-text { font-size: 1rem; gap: 18px; }
-  #wave-text p { gap: 0.4rem; }
+  #wave-text { font-size: 1rem; gap: 16px; }
 }
 </style>
 </head>
@@ -131,11 +116,66 @@ article.book-item p { color: #bbb; }
 </button>
 
 <section id="books-list" hidden>
-  <!-- Полный список книг оставляем -->
+  <article class="book-item">
+    <h3>«Самый богатый человек в Вавилоне» — Джордж Клейсон</h3>
+    <p>Классика финансовой мудрости — простые принципы накопления богатства, проверенные временем.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Думай как миллионер» — Харв Экер</h3>
+    <p>Образ мышления и привычки, которые помогают людям добиваться финансового успеха.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Тонкое искусство пофигизма» — Марк Мэнсон</h3>
+    <p>Необычный взгляд на личностный рост и умение правильно расставлять приоритеты.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Как разговаривать с кем угодно, когда угодно» — Ларри Кинг</h3>
+    <p>Советы легендарного телеведущего по эффективной коммуникации в любой ситуации.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Правила жизни успешных людей» — Дейл Карнеги</h3>
+    <p>Мудрые принципы, которые помогли миллионам стать более уверенными и успешными.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Как завоёвывать друзей и оказывать влияние на людей» — Дейл Карнеги</h3>
+    <p>Классика о том, как строить отношения, убеждать и быть влиятельным.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Бизнес без MBA» — Олег Тиньков</h3>
+    <p>Жизненный путь предпринимателя и советы для тех, кто хочет строить бизнес по-своему.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Правило номер 1: никогда не быть номер 2» — Дэн Мильштейн</h3>
+    <p>Как стать лидером в конкурентной среде, не теряя свою индивидуальность.</p>
+  </article>
+  <article class="book-item">
+    <h3>«48 законов власти» — Роберт Грин</h3>
+    <p>Психология влияния и стратегии власти, основанные на реальных исторических примерах.</p>
+  </article>
+  <article class="book-item">
+    <h3>«21 неопровержимый закон лидерства» — Джон Максвелл</h3>
+    <p>Мировой бестселлер о принципах, которые делают лидеров по-настоящему великими.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Атомные привычки» — Джеймс Клир</h3>
+    <p>Как маленькие привычки ежедневно формируют большие изменения в жизни.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Гении и аутсайдеры» — Малкольм Гладуэлл</h3>
+    <p>Почему успех — это не только талант, но и стечение обстоятельств, труда и времени.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Виртуозы общения» — Чарльз Дахигг</h3>
+    <p>О том, как создавать эффективные команды, принимать решения и общаться с пользой.</p>
+  </article>
+  <article class="book-item">
+    <h3>«Как разговаривать с мудаками» — Марк Гоулстон</h3>
+    <p>Практическое руководство по общению с токсичными людьми и сохранению самообладания.</p>
+  </article>
 </section>
 
 <script>
-// Текст с эффектом волны
+// Текст разбитый на абзацы
 const paragraphs = [
   "Привет! Меня зовут Павел, мне 14 лет.",
   "За последние месяцы я проделал огромную работу и не сдавался ни на шаг.",
@@ -149,15 +189,9 @@ const paragraphs = [
 ];
 
 const container = document.getElementById('wave-text');
-
-paragraphs.forEach((para, pIndex) => {
+paragraphs.forEach(para => {
   const p = document.createElement('p');
-  para.split('').forEach((char, i) => {
-    const span = document.createElement('span');
-    span.textContent = char;
-    span.style.animationDelay = `${(i + pIndex*para.length) * 0.03}s`;
-    p.appendChild(span);
-  });
+  p.textContent = para;
   container.appendChild(p);
 });
 
@@ -178,7 +212,7 @@ btn.addEventListener('click', () => {
   }
 });
 
-// Анимация частиц
+// Частицы на фоне
 const canvas = document.getElementById('particles');
 const ctx = canvas.getContext('2d');
 let w, h, particles = [];
@@ -227,7 +261,6 @@ function revealOnScroll() {
 }
 window.addEventListener('scroll', revealOnScroll);
 window.addEventListener('load', revealOnScroll);
-
 </script>
 
 </body>
