--- a/index.html
+++ b/index.html
@@ -6,7 +6,45 @@
   <title>PavelPA — Умный Telegram-ассистент</title>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600;800&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#0f1724">
-  <style>
+  <!-- Для вставки в <head> (замените значения на реальные URL/email) -->
+<meta name="description" content="PavelPA — умный Telegram-ассистент: голосовые ответы, напоминания, игры и персональная мотивация. Запустите бота и начните автоматизировать рутину.">
+<link rel="canonical" href="https://pauelky123.github.io/pavel/">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="manifest" href="/manifest.json">
+
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="PavelPA — Умный Telegram-ассистент">
+<meta property="og:description" content="Голосовые ответы, генерация изображений, напоминания и мини-игры. Удобный интерфейс и автоматизация рутинных задач.">
+<meta property="og:url" content="https://pauelky123.github.io/pavel/">
+<meta property="og:image" content="https://pauelky123.github.io/pavel/og-image.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="PavelPA — Умный Telegram-ассистент">
+<meta name="twitter:description" content="Голосовые ответы, генерация изображений, напоминания и мини-игры.">
+<meta name="twitter:image" content="https://pauelky123.github.io/pavel/og-image.png">
+
+<!-- JSON-LD (SoftwareApplication) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "PavelPA",
+  "operatingSystem": "Telegram",
+  "applicationCategory": "MessagingApplication",
+  "url": "https://pauelky123.github.io/pavel/",
+  "description": "Умный Telegram-ассистент с голосом, фактами, играми и напоминаниями.",
+  "author": {
+    "@type": "Person",
+    "name": "Pavel",
+    "url": "https://github.com/Pauelky123"
+  }
+}
+</script>
+
+<style>
     :root{
       --bg:#0f1724;
       --card:#111318;
@@ -156,7 +194,7 @@
 
           <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap;align-items:center">
             <a class="btn ghost" href="#reviews">Отзывы</a>
-            <a class="btn ghost" href="/docs/guide.pdf">Руководство</a>
+            <a class="btn ghost" href="docs/guide.pdf" target="_blank" rel="noopener">Руководство</a>
           </div>
         </div>
       </aside>
